<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".iu.ConfigActivity">

    <EditText
        android:id="@+id/etUser"
        android:inputType="text"
        android:layout_width="323dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/genMargin"
        android:hint="@string/esEtHintUser"
        android:text="@string/esEtTextUser"
        android:textColorHint="@color/black"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etNumTries"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/genMargin"
        android:hint="@string/esEtHintIntentos"
        android:text="@string/esEtNumTries"
        android:textColorHint="@color/black"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/esBtJugarText"
        android:layout_margin="@dimen/btnJugMargin" />

</LinearLayout>